--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "覆盖前端测试方向的所有内容，包含 - 单元测试 - 组件测试 - 端对端测试",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "vitest": "^3.0.7"
+  },
+  "dependencies": {
+    "@vitejs/plugin-vue": "^5.2.3",
+    "vitest-environment-cxr": "file:code/browser-env/vitest-environment-cxr"
   }
 }
